support-files/cpu-memory-limit-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-limited-pod
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    resources:
      requests:
        cpu: "5m"
        memory: "8Mi"
      limits:
        cpu: "20m"
        memory: "16Mi"
