support-files/init-container-pod-emptydir-size-limited.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container-demo-emptydir-size-limited
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: web-content-dir
      mountPath: /usr/share/nginx/html
  volumes:
  - name: web-content-dir
    emptyDir:
      sizeLimit: 128Mi
