support-files/init-container-pod-emptydir-tmpfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container-demo-emptydir-tmpfs
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: "10m"
        memory: "32Mi"
      limits:
        cpu: "50m"
        memory: "64Mi"
      
    volumeMounts:
    - name: web-content-dir
      mountPath: /usr/share/nginx/html

  volumes:
  - name: web-content-dir
    emptyDir:
      medium: "Memory"
      sizeLimit: 128Mi
