support-files/nginx-with-cpu-memory-limit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:       
      # labels 'used' by the deployment and replica-set selector, to find related pods.
      app: nginx
  template:
    metadata:
      labels:
        # label assigned to the pods of this deployment
        app: nginx      
    spec:
      containers:
      - name: nginx
        image: nginx:1.9.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "5m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "50Mi"
